--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.6.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
