--- a/portfolio-website/package.json
+++ b/portfolio-website/package.json
@@ -13,10 +13,10 @@
     "@lottiefiles/dotlottie-react": "^0.17.8",
     "@react-three/drei": "^10.0.6",
     "@react-three/fiber": "^9.1.2",
-    "@vercel/analytics": "^1.6.1",
     "emailjs-com": "^3.2.0",
     "framer-motion": "^12.18.1",
     "lottie-react": "^2.4.1",
+    "plausible-tracker": "^0.3.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
